fix button size on tablets

--- a/style.scss
+++ b/style.scss
@@ -62,6 +62,7 @@ a {
 .opening-line {
     text-align: right;
     grid-column: 1/3;
+    margin-bottom: 2.2em;
 }
 .opening-line {
     margin-top: calc(35vh + 0.5em);
@@ -71,6 +72,9 @@ a {
 }
 .opening-line .users {
     letter-spacing: 0.25em;
+}
+.users::before {
+    content: " \00A0";
 }
 .nav {
     text-align: right;
@@ -150,7 +154,7 @@ section {
     margin-right: auto;
     margin-top: -8vw;
     svg {
-        max-width: 781px;
+        max-width: 626px;
     }
     .text {
         position: absolute;
@@ -176,19 +180,27 @@ section {
     }
     .shape {
         position: relative;
-        width: 600px;
+        max-width: 600px;
         margin: 0 auto;
     }
 }
 @media (max-width: 1550px) {
-    .responsive,
-    .social,
-    .seo,
-    .environment {
+    section {
         margin-top: 4em;
     }
     .logo-name {
         display: none;
+    }
+    .environment {
+        margin-top: 0;
+    }
+}
+@media (max-width: 1250px) {
+    .opening-line {
+        margin-bottom: 0;
+    }
+    .environment {
+        margin-top: 4em;;
     }
 }
 @media (max-width: 1150px) {
@@ -228,6 +240,9 @@ section {
         }
         .users{
             letter-spacing: initial;
+            &::before {
+                display: none;
+            }
         }
     }
 }
@@ -263,6 +278,9 @@ section {
     }
     .social .text {
         top: 21%
+    }
+    .seo .text {
+        top: 16%;
     }
 }
 @media (max-width: 370px) {
